[package]
name = "pollard-p-minus-one"
version = "0.1.0"
authors = ["Gulshan Singh <gsingh2011@gmail.com>"]
repository = "https://github.com/gsingh93/trace"
license = "MIT"
readme = "README.md"
description = "An implementation of Pollard's p-1 factoring algorithm"
edition = "2018"

[dependencies]
ramp = "0.5.9"
primal = "0.3.0"
